Feat: nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png">
+    <script src="script.js"></script>
     <title>누리봄</title>
     <!-- <style></style> -->
 </head>
@@ -81,23 +82,19 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
-                                    <div class="window">
-                                        <div class="documents">
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                            <li><a href="#">hi</a></li>
-                                        </div>
-                                    </div>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
                                 </div>
                                 <button>></button>
                             </div>
@@ -109,6 +106,25 @@
                 <div class="sevnBox">
                     <div class="close">
                         <label for="modal6">닫기</label>
+                        <div class="pop-Box1">
+                            <div class="title1">
+                                <p>제목</p>
+                            </div>
+                            <div class="menuBox1">
+                                <div class="menu1">
+                                    <p>사진/그림</p>
+                                    <p>텍스트</p>
+                                </div>
+                            </div>
+                            <div class="pop-footer1">
+                                <div class="footer1">
+                                    <li>사진/그림1</li>
+                                    <li>사진/그림2</li>
+                                    <li>사진/그림3</li>
+                                    <li>사진/그림4</li>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -116,6 +132,35 @@
                 <div class="eightBox">
                     <div class="close">
                         <label for="modal7">닫기</label>
+                        <div class="pop-Box2">
+                            <div class="title2">
+                                <p>제목</p>
+                            </div>
+                            <div class="menuBox2">
+                                <div class="menu2">
+
+                                </div>
+                            </div>
+                            <div class="pop-footer2">
+                                <button><</button>
+                                <div class="footer2">
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                </div>
+                                <button>></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -123,6 +168,25 @@
                 <div class="nineBox">
                     <div class="close">
                         <label for="modal8">닫기</label>
+                        <div class="pop-Box1">
+                            <div class="title1">
+                                <p>제목</p>
+                            </div>
+                            <div class="menuBox1">
+                                <div class="menu1">
+                                    <p>사진/그림</p>
+                                    <p>텍스트</p>
+                                </div>
+                            </div>
+                            <div class="pop-footer1">
+                                <div class="footer1">
+                                    <li>사진/그림1</li>
+                                    <li>사진/그림2</li>
+                                    <li>사진/그림3</li>
+                                    <li>사진/그림4</li>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -130,6 +194,35 @@
                 <div class="tenBox">
                     <div class="close">
                         <label for="modal9">닫기</label>
+                        <div class="pop-Box2">
+                            <div class="title2">
+                                <p>제목</p>
+                            </div>
+                            <div class="menuBox2">
+                                <div class="menu2">
+
+                                </div>
+                            </div>
+                            <div class="pop-footer2">
+                                <button><</button>
+                                <div class="footer2">
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                </div>
+                                <button>></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
