--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png">
-    <script src="script.js"></script>
     <title>누리봄</title>
     <!-- <style></style> -->
 </head>
@@ -82,6 +81,19 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
@@ -228,5 +240,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
