Feat: Javascript-succes

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -156,6 +156,14 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
@@ -218,10 +226,10 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
+                                    <li><a href="#">hello</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
                                     <li><a href="#">hi</a></li>
