Feat: nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="labelpr">
-                    <a href="#">라벨프린트</a>
+                    <a href="http://habilience.com/label_print/" target="_blank">라벨프린트</a>
                 </div>
                 
                 <div class="btn1">
