Feat: nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -81,18 +81,18 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
+                                    <li><a href="sub1.html">hello</a></li>
+                                    <li><a href="sub2.html">hello</a></li>
+                                    <li><a href="sub3.html">hello</a></li>
+                                    <li><a href="sub4.html">hello</a></li>
+                                    <li><a href="sub5.html">hello</a></li>
+                                    <li><a href="sub6.html">hello</a></li>
+                                    <li><a href="sub7.html">hello</a></li>
+                                    <li><a href="sub8.html">hello</a></li>
+                                    <li><a href="sub9.html">hi</a></li>
+                                    <li><a href="sub10.html">hi</a></li>
+                                    <li><a href="sub11.html">hi</a></li>
+                                    <li><a href="sub12.html">hi</a></li>
                                 </div>
                                 <button>></button>
                             </div>
@@ -142,18 +142,18 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>                                    
+                                    <li><a href="sub13.html">hello</a></li>
+                                    <li><a href="sub14.html">hello</a></li>
+                                    <li><a href="sub15.html">hello</a></li>
+                                    <li><a href="sub16.html">hello</a></li>
+                                    <li><a href="sub17.html">hello</a></li>
+                                    <li><a href="sub18.html">hi</a></li>
+                                    <li><a href="sub19.html">hi</a></li>
+                                    <li><a href="sub20.html">hi</a></li>
+                                    <li><a href="sub21.html">hi</a></li>
+                                    <li><a href="sub22.html">hi</a></li>
+                                    <li><a href="sub23.html">hi</a></li>
+                                    <li><a href="sub24.html">hi</a></li>                                    
                                 </div>
                                 <button>></button>
                             </div>
@@ -203,18 +203,18 @@
                             <div class="pop-footer2">
                                 <button><</button>
                                 <div class="footer2">
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hello</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
+                                    <li><a href="sub25.html">hello</a></li>
+                                    <li><a href="sub26.html">hello</a></li>
+                                    <li><a href="sub27.html">hello</a></li>
+                                    <li><a href="sub28.html">hello</a></li>
+                                    <li><a href="sub29.html">hi</a></li>
+                                    <li><a href="sub30.html">hi</a></li>
+                                    <li><a href="sub31.html">hi</a></li>
+                                    <li><a href="sub32.html">hi</a></li>
+                                    <li><a href="sub33.html">hi</a></li>
+                                    <li><a href="sub34.html">hi</a></li>
+                                    <li><a href="sub35.html">hi</a></li>
+                                    <li><a href="sub36.html">hi</a></li>
                                 </div>
                                 <button>></button>
                             </div>
