Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -93,7 +93,9 @@
     <div class="con1">
         <div class="idiom">
             <button><p><</p></button>
-            <p>사자성어</p>
+            <li>사자성어</li>
+            <li>사자성어1</li>
+            <li>사자성어2</li>
             <button><p>></p></button>
         </div>
     </div>
