Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -29,7 +29,13 @@
                             <div class="logotext">
                                 <p>로그인</p>
                             </div>
-
+                            <div class="log-input">
+                                <input type="text" placeholder="아이디">
+                                <input type="password" placeholder="비밀번호">
+                            </div>
+                            <div class="push">
+                                <h3>로그인</h3>
+                            </div>
                         </div>
                     </div>
                     <button>REGISTER</button>
@@ -43,7 +49,6 @@
             <div class="itemBox1">
                 <div class="box1">
                     <label for="modal1" class="open">성장 그래프</label>
-
                 </div>
                 <input type="checkbox" id="modal1">
                 <div class="modalb">
