index.html 업데이트

--- a/Double-Slide/index.html
+++ b/Double-Slide/index.html
@@ -10,7 +10,7 @@
     <div class="window">
         <div class="slide">
             <div style="background-color: antiquewhite;"></div>
-            <div style="background-color: lightgray;"></div>
+            <div style="background-color: lightblue;"></div>
             <div style="background-color: antiquewhite;"></div>
             <div style="background-color: lightgray;"></div>
         </div>
