Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -85,9 +85,27 @@
                 <div class="box7">
                     <a href="#">예시</a>
                 </div>
-        
+                <input type="checkbox" id="modal3">
                 <div class="box8">
-                    <a href="#">발음</a>
+                    <label for="modal3" id="modal3">시험</label>
+                </div>
+                <div class="modalb1">
+                    <div class="box">
+                        <label for="modal3" class="close2">닫기</label>
+                        <div class="header-test">
+                            <h2>오늘의 도전</h2>
+                        </div>
+                        <div class="test-items">
+                            <p><a href="#">5개</a></p>
+                            <p><a href="#">10개</a></p>
+                            <p><a href="#">20개</a></p>
+                            <p><a href="#">50개</a></p>
+                            <p><a href="#">100개</a></p>
+                        </div>
+                        <div class="test">
+                            <h3><a href="#">시험보기</a></h3>
+                        </div>
+                    </div>
                 </div>
         
                 <div class="box9">
@@ -100,9 +118,13 @@
         <div class="idiom">
             <button><p><</p></button>
             <li>사자성어</li>
-            <li>사자성어1</li>
-            <li>사자성어2</li>
             <button><p>></p></button>
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
+                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                    <path d="M5.795 12.456A.5.5 0 0 1 5.5 12V4a.5.5 0 0 1 .832-.374l4.5 4a.5.5 0 0 1 0 .748l-4.5 4a.5.5 0 0 1-.537.082"/>
+                </svg>
+            </div>
         </div>
     </div>
     <div class="con2">
