Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -96,11 +96,11 @@
                             <h2>오늘의 도전</h2>
                         </div>
                         <div class="test-items">
-                            <p><a href="#">5개</a></p>
-                            <p><a href="#">10개</a></p>
-                            <p><a href="#">20개</a></p>
-                            <p><a href="#">50개</a></p>
-                            <p><a href="#">100개</a></p>
+                            <p><a href="sub01.html">5개</a></p>
+                            <p><a href="sub02.html">10개</a></p>
+                            <p><a href="sub03.html">20개</a></p>
+                            <p><a href="sub04.html">50개</a></p>
+                            <p><a href="sub05.html">100개</a></p>
                         </div>
                         <div class="test">
                             <h3><a href="#">시험보기</a></h3>
