--- a/JavaScript-test/index.html
+++ b/JavaScript-test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Small Bar Chart Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https:/cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* 캔버스 크기를 작게 설정 */
         #myBarChart {
