Feat: projcet-update

--- a/INPYUNG-PROJECT/index.html
+++ b/INPYUNG-PROJECT/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <a href="#"><img src="imgs/je.png" alt=""></a>
+        </div>
+        <nav>
+            <ul>
+                <li>hi</li>
+                <li>hi</li>
+                <li>hi</li>
+                <li>hi</li>
+            </ul>
+        </nav>
+        
+    </header>
 </body>
 </html>
