--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -116,9 +116,11 @@
     </nav>
     <div class="con1">
         <div class="idiom">
-            <button><p><</p></button>
-            <li>사자성어</li>
-            <button><p>></p></button>
+            <div class="idiom-main">
+                <button><p><</p></button>
+                <li>사자성어</li>
+                <button><p>></p></button>
+            </div>
             <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
