Feat: nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -39,152 +39,20 @@
                     <button><a href="http://law.nuribom.com/" target="_blank">법규 검색</a></button>
                 </div>
 
-                <label for="modal4" class="fiv">5번 버튼</label>
-                <div class="fivBox">
-                    <div class="close">
-                        <label for="modal4">닫기</label>
-                        <div class="pop-Box1">
-                            <div class="title1">
-                                <p>제목</p>
-                            </div>
-                            <div class="menuBox1">
-                                <div class="menu1">
-                                    <p>사진/그림</p>
-                                    <p>텍스트</p>
-                                </div>
-                            </div>
-                            <div class="pop-footer1">
-                                <div class="footer1">
-                                    <li>사진/그림1</li>
-                                    <li>사진/그림2</li>
-                                    <li>사진/그림3</li>
-                                    <li>사진/그림4</li>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <label for="modal5" class="six">6번 버튼</label>
-                <div class="sixBox">
-                    <div class="close">
-                        <label for="modal5">닫기</label>
-                        <div class="pop-Box2">
-                            <div class="title2">
-                                <p>제목</p>
-                            </div>
-                            <div class="menuBox2">
-                                <div class="menu2">
-
-                                </div>
-                            </div>
-                            <div class="pop-footer2">
-                                <button><</button>
-                                <div class="footer2">
-                                    <li><a href="sub1.html">hello</a></li>
-                                    <li><a href="sub2.html">hello</a></li>
-                                    <li><a href="sub3.html">hello</a></li>
-                                    <li><a href="sub4.html">hello</a></li>
-                                    <li><a href="sub5.html">hello</a></li>
-                                    <li><a href="sub6.html">hello</a></li>
-                                    <li><a href="sub7.html">hello</a></li>
-                                    <li><a href="sub8.html">hello</a></li>
-                                    <li><a href="sub9.html">hi</a></li>
-                                    <li><a href="sub10.html">hi</a></li>
-                                    <li><a href="sub11.html">hi</a></li>
-                                    <li><a href="sub12.html">hi</a></li>
-                                </div>
-                                <button>></button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="btn3">
+                    <button><a href="https://standard.go.kr/KSCI/portalindex.do" target="_blank">e나라표준인증</a></button>
                 </div>
                 
-                <label for="modal6" class="sevn">7번 버튼</label>
-                <div class="sevnBox">
-                    <div class="close">
-                        <label for="modal6">닫기</label>
-                        <div class="pop-Box1">
-                            <div class="title1">
-                                <p>제목</p>
-                            </div>
-                            <div class="menuBox1">
-                                <div class="menu1">
-                                    <p>사진/그림</p>
-                                    <p>텍스트</p>
-                                </div>
-                            </div>
-                            <div class="pop-footer1">
-                                <div class="footer1">
-                                    <li>사진/그림1</li>
-                                    <li>사진/그림2</li>
-                                    <li>사진/그림3</li>
-                                    <li>사진/그림4</li>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="btn4">
+                    <button><a href="https://slack.com/intl/ko-kr/" target="_blank">slack</a></button>
                 </div>
 
-                <label for="modal7" class="eight">8번 버튼</label>
-                <div class="eightBox">
-                    <div class="close">
-                        <label for="modal7">닫기</label>
-                        <div class="pop-Box2">
-                            <div class="title2">
-                                <p>제목</p>
-                            </div>
-                            <div class="menuBox2">
-                                <div class="menu2">
-
-                                </div>
-                            </div>
-                            <div class="pop-footer2">
-                                <button><</button>
-                                <div class="footer2">
-                                    <li><a href="sub13.html">hello</a></li>
-                                    <li><a href="sub14.html">hello</a></li>
-                                    <li><a href="sub15.html">hello</a></li>
-                                    <li><a href="sub16.html">hello</a></li>
-                                    <li><a href="sub17.html">hello</a></li>
-                                    <li><a href="sub18.html">hi</a></li>
-                                    <li><a href="sub19.html">hi</a></li>
-                                    <li><a href="sub20.html">hi</a></li>
-                                    <li><a href="sub21.html">hi</a></li>
-                                    <li><a href="sub22.html">hi</a></li>
-                                    <li><a href="sub23.html">hi</a></li>
-                                    <li><a href="sub24.html">hi</a></li>                                    
-                                </div>
-                                <button>></button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="btn5">
+                    <button><a href="http://habilience.com/" target="_blank">HABILIENCE</a></button>
                 </div>
 
-                <label for="modal8" class="nine">9번 버튼</label>
-                <div class="nineBox">
-                    <div class="close">
-                        <label for="modal8">닫기</label>
-                        <div class="pop-Box1">
-                            <div class="title1">
-                                <p>제목</p>
-                            </div>
-                            <div class="menuBox1">
-                                <div class="menu1">
-                                    <p>사진/그림</p>
-                                    <p>텍스트</p>
-                                </div>
-                            </div>
-                            <div class="pop-footer1">
-                                <div class="footer1">
-                                    <li>사진/그림1</li>
-                                    <li>사진/그림2</li>
-                                    <li>사진/그림3</li>
-                                    <li>사진/그림4</li>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="gpt">
+                    <button><a href="https://chatgpt.com/" target="_blank">Chat GPT</a></button>
                 </div>
                 <div class="conBox2">
                     <div class="file">
