--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -19,28 +19,27 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg>
-                </div>
-                <div class="headerBtn">
-                    <input type="checkbox" id="modal2">
-                    <button><label for="modal2" id="modal2">LOGIN</label></button>
-                    <div class="logb">
-                        <div class="lbox">
-                            <label for="modal2" class="close1">돌아가기</label>
-                            <div class="logotext">
-                                <p>로그인</p>
-                            </div>
-                            <div class="log-input">
-                                <input type="text" placeholder="아이디">
-                                <input type="password" placeholder="비밀번호">
-                            </div>
-                            <div class="push">
-                                <h3>로그인</h3>
-                            </div>
+            </div>
+            <div class="headerBtn">
+                <input type="checkbox" id="modal2">
+                <button><label for="modal2" id="modal2">LOGIN</label></button>
+                <div class="logb">
+                    <div class="lbox">
+                        <label for="modal2" class="close1">돌아가기</label>
+                        <div class="logotext">
+                            <p>로그인</p>
+                        </div>
+                        <div class="log-input">
+                            <input type="text" placeholder="아이디">
+                            <input type="password" placeholder="비밀번호">
+                        </div>
+                        <div class="push">
+                            <h3>로그인</h3>
                         </div>
                     </div>
-                    <button>REGISTER</button>
-                    <button>LANGUAGE</button>
                 </div>
+                <button>REGISTER</button>
+                <button>LANGUAGE</button>
             </div>
         </div>
     </header>
@@ -122,10 +121,11 @@
                 <button><p>></p></button>
             </div>
             <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
+                <svg id="audio-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                     <path d="M5.795 12.456A.5.5 0 0 1 5.5 12V4a.5.5 0 0 1 .832-.374l4.5 4a.5.5 0 0 1 0 .748l-4.5 4a.5.5 0 0 1-.537.082"/>
                 </svg>
+                <audio id="audio" src="path/to/your/audiofile.mp3"></audio>
             </div>
         </div>
     </div>
@@ -151,9 +151,12 @@
         </div>
     </div>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script>
+        document.getElementById('audio-icon').addEventListener('click', function() {
+            document.getElementById('audio').play();
+        });
+    </script>
 </body>
 </html>
