--- a/nuribom/sub01.html
+++ b/nuribom/sub01.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+            <div class="logo">
+                <h1><a href="#">Wisdom Tech</a></h1>
+            </div>
+            <div class="inBox">
+                <input type="text" placeholder="Search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                </svg>
+            </div>
+            <div class="headerBtn">
+                <input type="checkbox" id="modal2">
+                <button><label for="modal2" id="modal2">LOGIN</label></button>
+                <div class="logb">
+                    <div class="lbox">
+                        <label for="modal2" class="close1">돌아가기</label>
+                        <div class="logotext">
+                            <p>로그인</p>
+                        </div>
+                        <div class="log-input">
+                            <input type="text" placeholder="아이디">
+                            <input type="password" placeholder="비밀번호">
+                        </div>
+                        <div class="push">
+                            <h3>로그인</h3>
+                        </div>
+                    </div>
+                </div>
+                <button>REGISTER</button>
+                <button>LANGUAGE</button>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
