--- a/WebProject-nuribom/index.html
+++ b/WebProject-nuribom/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>누리봄</title>
 </head>
 <body>
     <header>
@@ -74,15 +74,6 @@
                                             <li>hi</li>
                                             <li>hi</li>
                                             <li>hello</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
-                                            <li>hi</li>
                                             <li>hi</li>
                                             <button>></button>
                                         </div>
