--- a/WebProject-nuribom/index.html
+++ b/WebProject-nuribom/index.html
@@ -32,13 +32,13 @@
                         <a href="https://standard.go.kr/KSCI/portalindex.do" target="_blank">e나라표준인증</a>
                     </div>
                     <div class="btn6">
-                        <a href="https://slack.com/intl/ko-kr/" target="_blank">slack</a>
+                        <a href="https://slack.com/intl/ko-kr/" target="_blank">SLACK</a>
                     </div>
                     <div class="btn7">
                         <a href="http://habilience.com/" target="_blank">HABILIENCE</a>
                     </div>
                     <div class="btn8">
-                        <a href="http://rpms.nuribom.com/" target="_blank">rpms</a>
+                        <a href="http://rpms.nuribom.com/" target="_blank">RPMS</a>
                     </div>
                     <div class="blank">
 
