--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="head">
             <div class="logo">
-                <h1><a href="#">Wisdom Tech</a></h1>
+                <h1><a href="index.html">Wisdom Tech</a></h1>
             </div>
             <div class="inBox">
                 <input type="text" placeholder="Search">
@@ -142,12 +142,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script>
-        document.getElementById('audio-icon').addEventListener('click', function() {
-            document.getElementById('audio').play();
-        });
-    </script>
 </body>
 </html>
